--- a/.github/workflows/27121_test.yml
+++ b/.github/workflows/27121_test.yml
@@ -15,3 +15,20 @@ jobs:
       - name:
         run: echo "Hello, world!"
         
+      - name: Set up environment
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential
+          sudo apt install -y make
+
+      - name: Save error log as artifact
+        if: failure()
+        run: |
+          echo "Error occurred while setting up environment" > error.txt
+          mkdir -p $HOME/artifacts
+          mv error.txt $HOME/artifacts
+        continue-on-error: true
+        uses: actions/upload-artifact@v2
+        with:
+          name: error-log
+          path: $HOME/artifacts
