--- a/.github/workflows/27121_test.yml
+++ b/.github/workflows/27121_test.yml
@@ -21,13 +21,15 @@ jobs:
           sudo apt install -y build-essential
           sudo apt install -y make
 
-      - name: Save error log as artifact
+      - name: Save error log
         if: failure()
         run: |
           echo "Error occurred while setting up environment" > error.txt
           mkdir -p $HOME/artifacts
           mv error.txt $HOME/artifacts
-        continue-on-error: true
+
+      - name: Upload error log artifact
+        if: failure()
         uses: actions/upload-artifact@v2
         with:
           name: error-log
