--- a/.github/workflows/27121_test.yml
+++ b/.github/workflows/27121_test.yml
@@ -34,3 +34,32 @@ jobs:
         with:
           name: error-log
           path: $HOME/artifacts
+
+  run_tests:
+    runs-on: self-hosted
+    needs: setup_environment
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: error-log
+          path: .
+
+      - name: Check error log
+        if: always()
+        run: |
+          if [ -f "error.txt" ]; then
+            echo "Error occurred while setting up environment!"
+            exit 1
+          else
+            echo "Environment set up successfully."
+          fi
+
+      - name: Run tests
+        if: success()
+        run: |
+          make all
+          ./demo_gcc
