--- a/.github/workflows/27121_test.yml
+++ b/.github/workflows/27121_test.yml
@@ -11,42 +11,25 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
       - name: Set up environment
         run: |
           sudo apt update
           sudo apt install -y build-essential
           sudo apt install -y make
-
-      - name: Save error log
-        if: failure()
-        run: |
-          echo "Error occurred while setting up environment" > error.txt
-          ls -l
-          mkdir -p $HOME/artifacts
-          mv error.txt $HOME/artifacts
-          ls -l $HOME/artifacts
-
-      - name: Upload error log artifact
-        if: failure()
+      - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: error-log
-          path: $HOME/artifacts
+          path: napaka.txt
 
   run_tests:
     runs-on: self-hosted
     needs: setup_environment
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        
-      - name: Download error log artifact
+      - name: Download artifact
         if: always()
         uses: actions/download-artifact@v2
         with:
           name: error-log
-          path: ${{ github.workspace }}/artifacts
-
-      - name: Print message
-        run: echo "Hello, world!"
+      - name: Test
+        run: ls -R
