--- a/.github/workflows/27121_deploy.yml
+++ b/.github/workflows/27121_deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: github.event.workflow_run.conclusion == 'success'
     env:
       DOCKER_HOST: tcp://localhost:2375
