--- a/.github/workflows/27121_deploy.yml
+++ b/.github/workflows/27121_deploy.yml
@@ -23,7 +23,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/testni_docker:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/testni_docker:latest -f /home/nejc/Documents/SA/vaja4/Dockerfile .
 
       - name: Push Docker image to DockerHub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/testni_docker:latest
