--- a/.github/workflows/27121_test.yml
+++ b/.github/workflows/27121_test.yml
@@ -20,7 +20,7 @@ jobs:
       
       - name: Create error file
         run: |
-          if sudo apt update && sudo apt install -y build-essential make; then
+          if sudo apt update && sudo apt install -y build-essential make docker; then
             echo "OK" > napaka.txt
           else
             echo "Napaka" > napaka.txt
