--- a/.github/workflows/27121_deploy.yml
+++ b/.github/workflows/27121_deploy.yml
@@ -10,6 +10,8 @@ jobs:
   deploy:
     runs-on: self-hosted
     if: github.event.workflow_run.conclusion == 'success'
+    env:
+      DOCKER_HOST: tcp://localhost:2375
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
