--- a/.github/workflows/27121_deploy.yml
+++ b/.github/workflows/27121_deploy.yml
@@ -17,15 +17,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
         run: |
-          docker build . --file Dockerfile --tag nejcmiholicferi/testni_docker:latest
+          docker build . --file /home/nejc/Documents/SA/vaja4/Dockerfile --tag nejcmiholicferi/testni_docker:latest
 
       - name: Push Docker image to DockerHub
         run: |
-          docker push nejcmiholicferi/testni_docker:latest
+          docker push nejcmiholicferi/vaja3_rep:latest
