--- a/.github/workflows/27121_test.yml
+++ b/.github/workflows/27121_test.yml
@@ -14,6 +14,7 @@ jobs:
       
       - name: Set up environment
         run: |
+          echo "123" | sudo -S -v
           sudo apt update
           sudo apt install -y build-essential
           sudo apt install -y make
