--- a/.github/workflows/27121_deploy.yml
+++ b/.github/workflows/27121_deploy.yml
@@ -17,8 +17,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to DockerHub
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
         run: |
@@ -26,4 +28,4 @@ jobs:
 
       - name: Push Docker image to DockerHub
         run: |
-          docker push nejcmiholicferi/vaja3_rep:latest
+          docker push nejcmiholicferi/testni_docker:latest
