--- a/.github/workflows/27121_deploy.yml
+++ b/.github/workflows/27121_deploy.yml
@@ -11,23 +11,13 @@ jobs:
     runs-on: self-hosted
     if: github.event.workflow_run.conclusion == 'success'
     env:
-      DOCKER_HOST: tcp://localhost:2375
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker image
+      - name: Build and push Docker image
         run: |
-          cd /home/nejc/Documents/SA/vaja4/
-          sudo docker build . -t vaja3:latest
-
-      - name: Push Docker image to DockerHub
-        run: |
-          sudo docker push nejcmiholicferi/vaja3:latest
-          
+          chmod +x .github/scripts/zapakiraj_27121.sh
+          .github/scripts/zapakiraj_27121.sh
